Update of Sqw sample, mcnp support, mcformat doc
git-svn-id: https://svn.mccode.org/svn/McStasTeX@150 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/Monitor_nD.tex
+++ b/trunk/Monitor_nD.tex
@@ -183,7 +183,7 @@ Monitor            & {\it options}="unactivate" \\
 PSDcyl\_monitor     & {\it options}="theta bins=$nr$,y bins=$ny$, cylinder"
 {\it filename}=$file$ {\it yheight}=$height$ {\it xwidth}=2*radius\\
 PSDlin\_monitor     & {\it options}="x bins=$nx$" {\it xmin}=$x_{min}$ {\it xmax}=$x_{max}$ {\it ymin}=$y_{min}$ {\it ymax}=$y_{max}$ {\it filename}=$file$\\
-PSD\_monitor\_4PI    & {\it options}="x y, sphere" \\
+PSD\_monitor\_4PI    & {\it options}="theta y, sphere" \\
 PSD\_monitor        & {\it options}="x bins=$nx$, y bins=$ny$" {\it xmin}=$x_{min}$ {\it xmax}=$x_{max}$ {\it ymin}=$y_{min}$ {\it ymax}=$y_{max}$ {\it filename}=$file$\\
 TOF\_cylPSD\_monitor & {\it options}="theta bins=$n_\phi$, time bins=$nt$ limits=[$t_0, t_1$], cylinder" {\it filename}=$file$ {\it yheight}=$height$ {\it xwidth}=2*radius\\
 TOFLambda\_monitor  & {\it options}="lambda bins=$n_\lambda$ limits=[$\lambda_0$ $\lambda_1$], time bins=$nt$ limits=[$t_0, t_1$]" {\it filename}=$file$\\
