--- a/trunk/mcstas.bib
+++ b/trunk/mcstas.bib
@@ -321,6 +321,10 @@
   note       = {See http://www.nea.fr/html/dbprog/tripoli-abs.html}
 }
 
+@misc{mcnp_webpage,
+  note       = {See http://mcnpx.lanl.gov/ and http://mcnp.lanl.gov/}
+}
+
 @book{squires,
   author    = {G.L. Squires},
    title     = {Thermal Neutron Scattering},
