--- a/trunk/terms.tex
+++ b/trunk/terms.tex
@@ -14,7 +14,8 @@ the \MCS\ core team.
 \item{\bf Arm}  A generic \MCS\ component which defines a frame of reference
       for other components.
 \item{\bf Component} One unit ({\em e.g.} optical element) in a neutron
-      spectrometer.
+      spectrometer. These are considered as Types of elements to be instantiated in an Instrument description.
+\item{\bf Component Instance} A named Component (of a given Type) inserted in an Instrument description.
 \item{\bf Definition parameter} An input parameter for a component. For
   example the radius of a sample component or the divergence of a collimator.
 \item{\bf Input parameter} For a component, either a definition parameter
