Added references to test instruments
git-svn-id: https://svn.mccode.org/svn/McStasTeX@153 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/isotropic_sqw.tex
+++ b/trunk/isotropic_sqw.tex
@@ -422,5 +422,7 @@ For constant incoherent scattering mode, V\_sample, PowderN, Single\_crystal and
 
 Compared with the PowderN component, the $S(q)$ method is twice slower in computation time (but often brings more statistics), and intensity is usually within 20 \%. The PowderN component is intrinsically more accurate as each Bragg peak is handled separately as an exact Dirac peak, with optional $\Delta q$ spreading. In Isotropic\_Sqw, an approximated $S(q)$ table is built from the $F^2$ data, and is coarser.
 
+The \verb+Test_Isotropic_Sqw+ test/example instrument exists in the distribution for this component.
+
 
 
