--- a/trunk/vanadium.tex
+++ b/trunk/vanadium.tex
@@ -76,3 +76,5 @@ of the scattered intensity is {\em not} isotropic.
 This is explained by the variation of attenuation with
 scattering angle.
 One test result is shown in the instrument example chapter of the \MCS\ User Manual.
+
+The \verb+vanadium_example+ and \verb+QENS_test+ test/example instruments exist in the distribution for this component.
