--- a/trunk/phonon.tex
+++ b/trunk/phonon.tex
@@ -5,7 +5,7 @@
 
 \component{Phonon\_simple}{Kim Lefmann, Ris\o\ National Laboratory}{ $r_{\rm o}$, $h$, $r_{\rm foc}$, $x_{\rm target}$, $y_{\rm target}$, $z_{\rm target}$, $\sigma_{\rm abs}$, $\sigma_{\rm inc}$, $a$, $b$, $c$, $M$, $DW$, $T$}{$w_x$, $h_y$, $t_z$, $w_{\rm focus}, h_{\rm focus}$, $w_{\rm foc, angle}$, $h_{\rm foc, angle}$, target\_index}{only validated qualitatively}
 
-This component models a simple phonon signal from a single crystal of 
+This component models a simple phonon signal from a single crystal of
 a pure element in an {\em fcc} crystal structure.
 Only one isotropic acoustic phonon branch is modelled, and the longitudinal
 and transverse dispersions are identical with the velocity of sound being $c$.
@@ -16,84 +16,84 @@ Incoherent scattering and absorption are taken into account by the cross
 sections $\sigma_{\rm abs}$ and $\sigma_{\rm inc}$.
 
 The sample can have the form of a cylinder with height $h$ and radius
-$r_0$, or a box with dimensions $w_x, h_y, t_z$. 
+$r_0$, or a box with dimensions $w_x, h_y, t_z$.
 
-Phonons are emitted into a specific range of solid angles, specified 
+Phonons are emitted into a specific range of solid angles, specified
 by the location $(x_t, y_t, z_t)$ and the focusing radius, $r_0$.
-Alternatively, the focusing is given by a rectangle, 
+Alternatively, the focusing is given by a rectangle,
 $w_{\rm focus}$ and $h_{\rm focus}$, and the focus point is given by the
 index of a down-stream component, \verb+target_index+.
 
-Multiple scattering is not included in this component. 
+Multiple scattering is not included in this component.
 
 \subsection{The phonon cross section} % This is modified from the paper version %
 The inelastic phonon cross section for a Bravais crystal of a pure element
-is given by Ref.~\cite[ch.3~]{squires} 
+is given by Ref.~\cite[ch.3~]{squires}
 \begin{eqnarray}
 \frac{d^2\sigma'}{d\Omega dE_{\rm f}} &=&
   b^2 \frac{k_{\rm f}}{k_{\rm i}} \frac{(2\pi)^3}{V_0}\frac{1}{2M} \exp(-2W) \nonumber \\
 &\times&
   \sum_{\tau,q,p} \frac{(\mbox{\boldmath $\kappa$} \cdot {\bf e}_{q,p})^2}
-                       {\omega_{q,p}} 
+                       {\omega_{q,p}}
   \left\langle n_{q,p} + \frac{1}{2} \mp \frac{1}{2} \right\rangle
   \delta(\omega\pm\omega_{q,p}) \delta(\kappa\pm{\bf q}-\tau) ,
 \end{eqnarray}
 where both annihilation and creation of one phonon is considered
 (represented by the plus and minus sign in the dispersion delta functions,
 respectively).
-In the equation, 
+In the equation,
 $\exp(-2W)$ is the Debye-Waller factor, \verb+DW+ and
 $V_0 $ is the volume of the unit cell.
-The sum runs over the reciprocal lattice vectors, $\tau$, 
+The sum runs over the reciprocal lattice vectors, $\tau$,
 over the polarisation index, $p$,
 and the $N$ allowed wave vectors {\bf q} within the Brillouin zone
 (where $N$ is the number of unit cells in the crystal).
 Further, ${\bf e}_{q,p}$ is the
 polarization unit vectors, $\omega_{q,p}$ the phonon dispersion,
-and the Bose factor is 
+and the Bose factor is
 $\langle n_{q,p} \rangle = (\hbar \exp(|\omega_{q,p}|/k_{\rm B}T)-1)^{-1}$.
 
 We have simplified this expression by assuming no polarization
-dependence of the dispersion, giving 
+dependence of the dispersion, giving
 $\sum_{p} (\mbox{\boldmath $\kappa$} \cdot {\bf e}_{q,p})^2 = \kappa^2$.
 We assume that the inter-atomic interaction is nearest-neighbour-only
-so that the phonon dispersion becomes: 
+so that the phonon dispersion becomes:
 \begin{equation}
 d_1({\bf q}) = c_1/a \sqrt{z-s_q} ,
 \end{equation}
-where $z=12$ is the number of nearest neighbours and 
+where $z=12$ is the number of nearest neighbours and
 $s_q=\sum_{\rm nn} \cos({\bf q} \cdot {\bf r}_{\rm nn})$,
-where in turn ${\bf r}_{\rm nn}$ is the lattice positions of the 
+where in turn ${\bf r}_{\rm nn}$ is the lattice positions of the
 nearest neighbours.
 
 This dispersion relation may be modified with a small effort,
 since it is given as a separate c-function attatched to the component.
 
-To calculate $d\sigma/d\Omega$ we need to transform the 
-{\bf q} sum into an integral over the Brillouin zone by 
+To calculate $d\sigma/d\Omega$ we need to transform the
+{\bf q} sum into an integral over the Brillouin zone by
 $\sum_q \rightarrow N V_{\rm c} (2\pi)^{-3} \int_{\rm BZ} d^3{\bf q}$.
 The $\mbox{\boldmath $\kappa$}$ sum can now be removed by
-expanding the {\bf q} integral to infinity. 
+expanding the {\bf q} integral to infinity.
 All in all, the partial differential cross section reads
 \begin{eqnarray}
 \frac{d^2\sigma'}{d\Omega dE_{\rm f}}
   (\mbox{\boldmath $\kappa$},\omega) &=&
-  N b^2 \frac{k_{\rm f}}{k_{\rm i}} \frac{1}{2M} 
-  \int \frac{\hbar \kappa^2}{\hbar \omega_q} 
+  N b^2 \frac{k_{\rm f}}{k_{\rm i}} \frac{1}{2M}
+  \int \frac{\hbar \kappa^2}{\hbar \omega_q}
   \left\langle n_{q}+\frac{1}{2}\mp\frac{1}{2} \right\rangle
-  \delta(\omega\pm\omega_{q}) \delta(\mbox{\boldmath $\kappa$}\pm{\bf q}) 
+  \delta(\omega\pm\omega_{q}) \delta(\mbox{\boldmath $\kappa$}\pm{\bf q})
    d^3{\bf q} \nonumber \\
- &=& N b^2 \frac{k_{\rm f}}{k_{\rm i}}  
-          \frac{\hbar^2 \kappa^2}{2M \hbar \omega_q} 
-  \left\langle n_{\kappa}+\frac12\pm\frac12 \right\rangle 
+ &=& N b^2 \frac{k_{\rm f}}{k_{\rm i}}
+          \frac{\hbar^2 \kappa^2}{2M \hbar \omega_q}
+  \left\langle n_{\kappa}+\frac12\pm\frac12 \right\rangle
   \delta(\hbar\omega\pm d_1(\kappa)) . \label{e:phonon-pdcross}
 \end{eqnarray}
 
 \subsection{The algorithm}
 All neutrons, which hit the sample volume, are scattered
 into a particular range of solid angle, $\Delta \Omega$,
-like many other components. One of the difficult things in 
-scattering from a dispersion is to take care to fulfill the 
+like many other components. One of the difficult things in
+scattering from a dispersion is to take care to fulfill the
 dispersion criteria and to find the correct weight transformation.
 
 In {\bf Phonon\_simple}, the following steps are taken:
@@ -101,14 +101,14 @@ In {\bf Phonon\_simple}, the following steps are taken:
 \item If the sample is hit, calculate the total path length inside the
 sample, otherwise leave the neutron ray unchanged.
 \item Choose a scattering point inside the sample
-\item Choose a direction for the final wave vector, $\hat{\bf k}_{\rm f}$ 
+\item Choose a direction for the final wave vector, $\hat{\bf k}_{\rm f}$
 within $\Delta\Omega$.
 \item Calculate possible values of $k_{\rm f}$ so that the
 dispersion relation is fulfilled for the corresponding value
 of ${\bf k}_{\rm f}$. (There is always at least one possible $k_{\rm f}$
 value \cite{bacon}.)
 \item Choose one of the calculated $k_{\rm f}$ values.
-\item Propagate the neutron to the scattering point and adjust the 
+\item Propagate the neutron to the scattering point and adjust the
 neutron velocity according to $k_{\rm f}$.
 \item Calculate and apply the correct weight factor correction, see below.
 \end{enumerate}
@@ -124,14 +124,14 @@ the integration rule $\int \delta(f(x)) = (df/dx)(0)^{-1}$.
 Now, we reach
 \begin{equation} \label{eq:phononcross}
 \left(\frac{d\sigma'}{d\Omega}\right)_j = \int \frac{d^2\sigma'}{d\Omega dE_{\rm f}} dE_{\rm f}
- = N b^2 \frac{k_{\rm f}}{k_{\rm i}} 
-\frac{\hbar^2 \kappa^2}{2M d_1(\kappa_j) J(k_{{\rm f},j})} 
-\left\langle n_{\kappa}+\frac12\pm\frac12 \right\rangle . 
+ = N b^2 \frac{k_{\rm f}}{k_{\rm i}}
+\frac{\hbar^2 \kappa^2}{2M d_1(\kappa_j) J(k_{{\rm f},j})}
+\left\langle n_{\kappa}+\frac12\pm\frac12 \right\rangle .
 \end{equation}
 
 where the Jacobian reads
 \begin{equation}
-J = 1 - \frac{m_{\rm N}}{k_{\rm f} \hbar^2} 
+J = 1 - \frac{m_{\rm N}}{k_{\rm f} \hbar^2}
     \frac{\partial}{\partial k_{\rm f}} \left( d_1(\kappa) \right) .
 \end{equation}
 
@@ -142,16 +142,18 @@ $\langle n_{\kappa}+\frac12\pm\frac12 \rangle \approx 1$,
 $\frac{\hbar^2\kappa^2}{2M d_1(\kappa)}
 \approx \frac{m}{M}$.
 Hence, $\left(\frac{d\sigma}{d\Omega}\right)_j \approx N b^2 \frac{m}{M}$, and
-the phonon cross section becomes a fraction of 
+the phonon cross section becomes a fraction of
 the total scattering cross section $4 \pi N b^2$, as it must be.
-The differential cross section per unit volume is found from 
+The differential cross section per unit volume is found from
 (\ref{eq:phononcross}) by replacing $N$ with $1/V_0$.
 
 The total weight transformation now becomes
 \begin{equation} \label{eq:phonon_mult}
 \pi_i = a_{\rm lin} l_{\rm max} n_{\rm s} \Delta \Omega
  b^2 \frac{k_{{\rm f},j}}{k_{\rm i}}
- \frac{\hbar^2 \kappa}{2 V_0 M d_1(\kappa) J(k_{{\rm f},j})} 
+ \frac{\hbar^2 \kappa}{2 V_0 M d_1(\kappa) J(k_{{\rm f},j})}
  \left\langle n_{\kappa}+\frac12 \pm\frac12 \right\rangle ,
 \end{equation}
 where $n_s$ is the number of possible dispersion values in the chosen direction.
+
+The \verb+Test_Phonon+ test/example instrument exists in the distribution for this component.
