Peter C's polarisation note as abstract. Needs checking...
git-svn-id: https://svn.mccode.org/svn/McStasTeX@154 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/mcstas.bib
+++ b/trunk/mcstas.bib
@@ -291,6 +291,16 @@
    year      = {2000},
    volume    = {283}
 }
+
+@article{pol_seeger,
+   author ={P. A. Seeger and  L. L. Daemen},
+   title = {Numerical Solution of Bloch's Equation for Neutron Spin Precession},
+   journal = nim,
+   pages = {338},
+   year = {2001},
+   volume = {457}
+}
+
 @article{IDEAS,
    author    = {W.-T. Lee and X.-L. Wang},
    journal   = nn,
@@ -360,6 +370,13 @@
    title     = {Theory of neutron scattering from condensed matter},
    year      = {1984},
    publisher = {Oxford Clarendon Press}
+}
+
+@book{gavin,
+  author  = {W.~Gavin~Williams},
+  title = {Polarized Neutrons},
+  year = {1988},
+  publisher = {Oxford Clarendon Press}
 }
 
 @book{Egelstaff67,
